nextjs-auth complete

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 
 DATABASE_URL="file:./dev.db"
 
-AUTH_SECRET="CbtnpSFtehI+RJJKd/XIVhJVFhoU9YAuBVQkzCs+Wp4="
+#AUTH_SECRET="CbtnpSFtehI+RJJKd/XIVhJVFhoU9YAuBVQkzCs+Wp4="
